3.5.0
* Post DiFX 2.4
* Consider equality of EOP values when merging jobs

3.4.0
* Fix X/Y polarization issue
* Change internal representation of networkPort from integer to string to accomodate ethernet device names
* Fix polarization detection in cases where antennas have heterogeneous polarization needs
* Add psrflag utility -- looks at fringe rates beating against pulsar period with full pulsar gate as a window function 
* Psrflag utility updated to allow user-settable threshold
* Change reference frequency, used by difx2fits, to be the bottom edge of the first AIPS IF
* Version for DiFX-2.4, Nov 04, 2014

3.3.0
* Allow ".input" portion of input file to be optional
* Version for DiFX-2.3, Dec 20, 2013

3.2.0
* Now the DifxIF structures are _always_ set to be USB.  This will break compatibility with earlier versions of difx2fits and maybe difx2mark4.
* Add DIFX LABEL to .calc file
* Tcal requests will now return values outside sampled range, but will cause warning at end of processing.
* Support RX NAME parameter in FREQ table
* Experimental support for TLE spacecraft ephemerides
* Some segfault protecting in model writing (CJP+WFB)
* Experimental support for polarization dependent delay and phase offsets (CJP)
* Version for DiFX-2.2, May 31, 2013

3.1.0
* Rename from 3.0.2 prior to DiFX-2.1
* Version for DiFX-2.1, May 4, 2012

3.0.2
* Post DiFX-2.0.1
* Infrastructure for az, el, parallactic angle in model added
* Tcal managing structures and functions added
* Bug fix: simplifyDifxRules: allow number of rules to go to zero
* Version for DiFX-2.1, May 4, 2012

3.0.1
* Post DiFX-2.0.0
* All string parameters of difx_input have parameterized lengths
* Get rid of strcpy and strncpy in favor of more friendly snprintf
* Add optional VEX FILE parameter to .calc file
* Introduce new enum SamplingType 
* Add infrastructure for tcalFrequency
* Add DifxStringArray, which will be used for storing scan names and source names in DifxRule blocks