@@ -1,6 +1,10 @@
 3.5.0
 * Post DiFX 2.4
 * Consider equality of EOP values when merging jobs
+* Implement EOP merging modes.  Currently this will be set automatically based total number of days spanned by EOPs.
+  - Relaxed means merge EOPs if they are consistent, with a resulting maximum of 6 days of values
+  - Strict means only merge if EOPs cover the same days
+  - In either case, refuse to merge if the EOPs are different on any day
 
 3.4.0
 * Fix X/Y polarization issue
